src/objects/AdvDev__c.object
<CustomObject>
    <fields>
        <fullName>CourseDescription_adv__c</fullName>
        <label>CourseDescription</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CourseFee_ADVDEV__c</fullName>
        <label>CourseFee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CourseTriner_adv__c</fullName>
        <label>Course Traier</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>JOe2</fullName>
                </value>
                <value>
                    <fullName>janeele2</fullName>
                </value>
                <value>
                    <fullName>jhon2</fullName>
                </value>
                <value>
                    <fullName>eric 2</fullName>
                </value>
                <value>
                    <fullName>nic2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Courses__c</fullName>
        <label>Courses</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ADV1</fullName>
                </value>
                <value>
                    <fullName>Adv2</fullName>
                </value>
                <value>
                    <fullName>Adv3</fullName>
                </value>
                <value>
                    <fullName>Adv4</fullName>
                </value>
                <value>
                    <fullName>Adv5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RegistrationNumber_ADvdev__c</fullName>
        <label>RegistrationNumber</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>trainig_adv__c</fullName>
        <label>Trainig</label>
        <referenceTo>Trainig__c</referenceTo>
        <relationshipLabel>AdvDev</relationshipLabel>
        <relationshipName>AdvDev</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>AdvDev</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>AdvDev Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AdvDev</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>NoDuplicates</fullName>
        <active>true</active>
        <errorConditionFormula>Name= VLOOKUP( $ObjectType.AdvDev__c.Fields.Name ,  $ObjectType.AdvDev__c.Fields.Name, Name )</errorConditionFormula>
        <errorMessage>The person with the same name already registered.</errorMessage>
    </validationRules>
</CustomObject>